# fastapi-clerk-auth

./: README.md  main.py  protected.py  pyproject.toml
app/: .env  config.py
static/: custom.css  custom.js
utils/: .env  auth.py  config.py
utils/authentication/: clerk.py  combined.py  gcp.py
