[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.111.0"
google-auth = "2.29.0" # If you intend to use GCP OAuth too
fastapi_clerk_auth = "0.0.5"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
